tests/lean/t9.lean.expected.out
a+b*a : N
t9.lean:16:7: error: invalid expression
a+b*a : N
